# mcp-file-assistant-workshop

./: .gitignore  README.md  pyproject.toml
file_assistant/: __init__.py  server.py  server_solution.py
test_files/: notes.txt  todo.md
